feat: adiciona dinamicidade na imagem de fundo

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 
 body {
   background: var(--background-img) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -39,7 +40,8 @@ body * {
 
 #container {
   margin: 56px auto 0px;
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   padding: 0px 24px;
 }
 
@@ -152,4 +154,14 @@ footer {
 
 footer a {
   text-decoration: underline;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --background-img: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --background-img: url(./assets/bg-desktop-light.jpg);
+  }
 }
