feat: adiciona animação no botão toggle

--- a/style.css
+++ b/style.css
@@ -77,14 +77,17 @@ body * {
   border-radius: 50%;
   position: absolute;
   z-index: 1;
-  left: 0;
   top: 50%;
   transform: translateY(-50%);
+  animation: slide-out 0.4s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
 }
 
 #switch span {
@@ -163,5 +166,23 @@ footer a {
 
   .light {
     --background-img: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
